menu nav scrolls down - visual bug where it overlaps regular nav if we scroll up

--- a/src/components/CombinedMenu/CombinedMenu.css
+++ b/src/components/CombinedMenu/CombinedMenu.css
@@ -1,5 +1,5 @@
 .menu-container {
     max-width: 700px;
     margin: 0 auto;
-    padding: 20px;
+    /* padding: 20px; */
 }
